feat (todo): добавить форму добавления задачи

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
             <a href="kanban.html" class="tab">Kanban</a>
             <a href="habits.html" class="tab">Привычки</a>
         </nav>
+    </div>
     </header>
     <main class="container">
-      <h1 class="page-title">Задачи</h1>
-    </main>
-</body>
+      <h1 class="page-title">To Do</h1>
+      <div class="form-add">
+        <input class="form-add_input" type="text" placeholder="Введите задачу " />
+        <button class="form-add_button" type="button">Добавить</button>
+    </div>
+   </main>
+  </body>
 </html>
