feat(todo) : Стилизация карточки задачи

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <button class="form-add_button" type="button">Добавить</button>
     </div>
    </main>
+   <script src="script.js"></script>
   </body>
 </html>
